tests/ui/typeck/constants/multiple_constant_keywords.sol
// Duplicate mutability specifier
uint constant constant x = 0; //~ ERROR: mutability already specified
